--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:1.0.10
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.11
     depends_on:
       keycloak:
         condition: service_healthy
@@ -72,6 +72,8 @@ services:
         condition: service_healthy
       zipkin:
         condition: service_started
+    ports:
+      - '5008:5008'
     environment:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
@@ -84,23 +86,30 @@ services:
       spring.servlet.multipart.max-file-size: 200MB
       spring.servlet.multipart.max-request-size: 200MB
       webprotege.rabbit.timeout: 600000
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.13
+    image: protegeproject/webprotege-gwt-ui-server:5.0.14
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
       keycloak:
         condition: service_healthy
-    # ports:
-      # - 8888:8080
+    ports:
+      - '5007:5007'
     environment:
       minio.access.key: minioadmin
       minio.access.secret: minioadmin
       minio.endPoint: http://minio:9000
       webprotege.gwt-api-gateway.endPoint: http://webprotege-gwt-api-gateway:7777
       webprotege.rabbit.timeout: 300000
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5007
 
 
   webprotege-authorization-service:
@@ -185,7 +194,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:1.3.3
+    image: protegeproject/webprotege-backend-service:1.3.4
     ports:
       - '5005:5005'
     depends_on:
