--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:1.0.11
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.12
     depends_on:
       keycloak:
         condition: service_healthy
@@ -92,7 +92,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.14
+    image: protegeproject/webprotege-gwt-ui-server:5.0.17-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -194,7 +194,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:1.3.4
+    image: protegeproject/webprotege-backend-service:1.3.6-WHO
     ports:
       - '5005:5005'
     depends_on:
