--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,13 +56,13 @@ server {
 
     location /auth/ {
         proxy_pass http://keycloak:8080/auth/;
-        proxy_set_header   Host $http_host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host  $host;
-        proxy_set_header   X-Forwarded-Server  $host;
-        proxy_set_header   X-Forwarded-Port  $server_port;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+#         proxy_set_header   Host $http_host;
+#         proxy_set_header   X-Real-IP $remote_addr;
+#         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header   X-Forwarded-Host  $host;
+#         proxy_set_header   X-Forwarded-Server  $host;
+#         proxy_set_header   X-Forwarded-Port  $server_port;
+#         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://webprotege-local.edu/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
         # subs_filter st(\d*).example.com $1.example.com ir;
