--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "5672:5672"
       - "15672:15672"
     healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
+      test: [ "CMD", "rabbitmqctl", "status" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -53,7 +53,7 @@ services:
     command: [ "server", "/data", "--console-address", ":9001" ]
     restart: always
     volumes:
-     - minio_data:/data
+      - minio_data:/data
     ports:
       - '9000:9000'
       - '9001:9001'
@@ -92,7 +92,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.20-WHO
+    image: protegeproject/webprotege-gwt-ui-server:5.0.23-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -113,7 +113,9 @@ services:
 
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:1.0.2
+    image: protegeproject/webprotege-authorization-service:1.0.3-WHO
+    ports:
+      - '5010:5010'
     depends_on:
       keycloak:
         condition: service_healthy
@@ -129,6 +131,9 @@ services:
       keycloak.jwk-set-uri: http://keycloak:8080
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5010
 
   webprotege-user-management-service:
     image: protegeproject/webprotege-user-management-service:1.0.1
@@ -178,7 +183,7 @@ services:
 
 
   webprotege-initial-revision-history-service:
-    image:  protegeproject/webprotege-initial-revision-history-service:1.0.0
+    image: protegeproject/webprotege-initial-revision-history-service:1.0.0
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -194,7 +199,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:1.3.8-WHO
+    image: protegeproject/webprotege-backend-service:1.3.10-WHO
     ports:
       - '5005:5005'
     depends_on:
@@ -216,7 +221,7 @@ services:
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       webprotege.rabbit.timeout: 600000
     volumes:
-    - webprotege-data-directory:/srv/webprotege
+      - webprotege-data-directory:/srv/webprotege
 
 
   nginx:
@@ -224,7 +229,7 @@ services:
     hostname: webprotege-local.edu
     ports:
       - 80:80
-    depends_on: 
+    depends_on:
       - webprotege-gwt-ui-server
       - keycloak
 
