--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:1.0.12
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.14-WHO
     depends_on:
       keycloak:
         condition: service_healthy
@@ -137,6 +137,8 @@ services:
 
   webprotege-user-management-service:
     image: protegeproject/webprotege-user-management-service:1.0.1
+    ports:
+      - '5009:5009'
     depends_on:
       keycloak:
         condition: service_healthy
@@ -148,6 +150,9 @@ services:
         condition: service_healthy
     environment:
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5009
 
   webprotege-event-history-service:
     image: protegeproject/webprotege-event-history-service:1.0.2
@@ -199,7 +204,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:1.3.10-WHO
+    image: protegeproject/webprotege-backend-service:1.3.13-WHO
     ports:
       - '5005:5005'
     depends_on:
@@ -218,6 +223,32 @@ services:
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      webprotege.rabbit.timeout: 600000
+    volumes:
+      - webprotege-data-directory:/srv/webprotege
+
+  webprotege-linearization-service:
+    user: root
+    image: protegeproject/webprotege-linearization-service:1.0.0
+    ports:
+      - '5011:5011'
+    depends_on:
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.zipkin.baseUrl: http://zipkin:9411
+      webprotege.minio.accessKey: webprotege
+      webprotege.minio.secretKey: webprotege
+      webprotege.minio.endPoint: http://minio:9000
+      webprotege.directories.data: /srv/webprotege
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5011
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       webprotege.rabbit.timeout: 600000
     volumes:
