--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -255,6 +255,33 @@ services:
       - webprotege-data-directory:/srv/webprotege
 
 
+  webprotege-postcoordination-service:
+    user: root
+    image: protegeproject/webprotege-postcoordination-service:1.0.0
+    ports:
+      - '5012:5012'
+    depends_on:
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.zipkin.baseUrl: http://zipkin:9411
+      webprotege.minio.accessKey: webprotege
+      webprotege.minio.secretKey: webprotege
+      webprotege.minio.endPoint: http://minio:9000
+      webprotege.directories.data: /srv/webprotege
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5012
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      webprotege.rabbit.timeout: 600000
+    volumes:
+      - webprotege-data-directory:/srv/webprotege
+
+
   nginx:
     image: protegeproject/webprotege-nginx:1.2.0
     hostname: webprotege-local.edu
