updated with latest versions for icatx-versioning release

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:7.0.3-WHO
+    image: protegeproject/webprotege-gwt-ui-server:7.0.5-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -155,7 +155,7 @@ services:
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5009
 
   webprotege-event-history-service:
-    image: protegeproject/webprotege-event-history-service:2.0.5-WHO
+    image: protegeproject/webprotege-event-history-service:2.0.8-WHO
     ports:
       - '5006:5006'
     depends_on:
@@ -204,7 +204,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:2.0.11-WHO
+    image: protegeproject/webprotege-backend-service:2.0.14-WHO
     ports:
       - "5005:5005"  # For remote debugging
       - "9010:9010"  # For JMX monitoring
@@ -238,7 +238,7 @@ services:
 
   webprotege-linearization-service:
     user: root
-    image: protegeproject/webprotege-linearization-service:1.0.10
+    image: protegeproject/webprotege-linearization-service:1.0.14
     ports:
       - '5011:5011'
     depends_on:
@@ -265,7 +265,7 @@ services:
 
   webprotege-postcoordination-service:
     user: root
-    image: protegeproject/webprotege-postcoordination-service:1.0.10
+    image: protegeproject/webprotege-postcoordination-service:1.0.11
     ports:
       - '5012:5012'
     depends_on:
@@ -309,6 +309,8 @@ services:
       webprotege.minio.secretKey: webprotege
       webprotege.minio.endPoint: http://minio:9000
       webprotege.directories.data: /srv/webprotege
+      webprotege.directories.backup: /webprotege/backup
+      webprotege.versioning.location: /srv/versioning/
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
@@ -317,10 +319,11 @@ services:
     volumes:
       - webprotege-data-directory:/srv/webprotege
       - webprotege-backup-directory:/webprotege/backup
+      - webprotege-versioning-directory:/srv/versioning/
 
   icatx-api-gateway:
     user: root
-    image: protegeproject/icatx-api-gateway:0.0.1
+    image: protegeproject/icatx-api-gateway:0.0.2
     ports:
       - '5014:5014'
     depends_on:
@@ -338,7 +341,7 @@ services:
       webprotege.directories.data: /srv/webprotege
       _JAVA_OPTIONS: >
         -Xdebug
-        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5014
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       webprotege.rabbit.timeout: 600000
     volumes:
@@ -361,3 +364,4 @@ volumes:
   keycloak-h2-directory:
   minio_data:
   webprotege-backup-directory:
+  webprotege-versioning-directory:
