--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
     server_name webprotege-local.edu;
+    sendfile on;
+    client_max_body_size 40M;
+    client_body_buffer_size 40M;
 
     location / {
         proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
@@ -51,19 +54,15 @@ server {
         rewrite_log on;
     }
 
-    location /auth/ {
-        proxy_pass http://keycloak:8080/auth/;
-        proxy_set_header   Host $http_host;
+    location /keycloak-admin/ {
+        proxy_pass http://keycloak:8080/keycloak-admin/;
+        proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host  $host;
-        proxy_set_header   X-Forwarded-Server  $host;
-        proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
-        proxy_redirect    http://keycloak:8080/auth/ http://webprotege-local.edu/auth/;
-        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
-        # subs_filter st(\d*).example.com $1.example.com ir;
-        # subs_filter keycloak:8080 localhost;
+        proxy_set_header   X-Forwarded-Host $http_host;
+        proxy_set_header   X-Forwarded-Port $server_port;
+        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
     }
 
     location /wsapps {
