--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,22 @@ services:
 
 
   keycloak:
-    image: keycloak/keycloak:26.1
-    command: ["start-dev"]
+    image: webprotege-keycloak:0.0.2
     ports:
       - 8080:8080
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=password
       - KC_PROXY=edge
       - KC_LOG_LEVEL=DEBUG
+      - KK_TO_RMQ_USERNAME=guest
+      - KK_TO_RMQ_PASSWORD=guest
+      - KK_TO_RMQ_VHOST=/
+      - KK_TO_RMQ_URL=rabbitmq
+      - KK_TO_RMQ_EXCHANGE=webprotege-event-exchange
    #   - KC_IMPORT=/tmp/webprotege.json
       #- KC_HOSTNAME=http://webprotege-local.edu  # ✅ Must be a full URL
       #- KC_HOSTNAME_URL=http://webprotege-local.edu  # ✅ Consistent full URL
