--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,22 +23,27 @@ services:
 
 
   keycloak:
-    image: protegeproject/keycloak
-    # ports:
-    #   - 8080:8080
+    image: webprotege-keycloak:0.0.1
+    command: [ "start-dev" ]
+    ports:
+      - 8080:8080
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: password
-      PROXY_ADDRESS_FORWARDING: "true"
-      KEYCLOAK_LOGLEVEL: DEBUG
-      KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
-      KEYCLOAK_IMPORT: /tmp/webprotege.json
-      KEYCLOAK_HOSTNAME_ADMIN_URL: "http://webprotege-local.edu/auth"
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=password
+      - KC_PROXY=edge
+      - KC_LOG_LEVEL=DEBUG
+      - KC_HTTP_RELATIVE_PATH=/keycloak-admin
+      - KC_FEATURES=hostname
+      - KC_THEME=webprotege
+      - KC_THEME_LOGIN=webprotege
     volumes:
-      - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
-      - ./keycloak:/tmp
+      - keycloak-h2-directory:/opt/keycloak/data
+      - ./keycloak/webprotege.v2:/opt/keycloak/themes/webprotege.v2
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
+      test: [ "CMD", "/opt/keycloak/bin/kc.sh", "show-config" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -92,7 +97,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:7.2.6-WHO
+    image: protegeproject/webprotege-gwt-ui-server:7.2.7-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -351,7 +356,7 @@ services:
 
 
   nginx:
-    image: protegeproject/webprotege-nginx:1.2.0
+    image: protegeproject/webprotege-nginx:1.2.1
     hostname: webprotege-local.edu
     ports:
       - 80:80
