--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,6 +1,6 @@
-FROM protegeproject/keycloak:latest
+FROM keycloak/keycloak:26.1
 
 EXPOSE 8080
 
 
-COPY ./webprotege /opt/jboss/keycloak/themes/webprotege
+COPY ./webprotege.v2 /opt/keycloak/themes/webprotege.v2
