--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,22 +23,27 @@ services:
 
 
   keycloak:
-    image: protegeproject/keycloak
-    # ports:
-    #   - 8080:8080
+    image: webprotege-keycloak:0.0.1
+    command: [ "start-dev" ]
+    ports:
+      - 8080:8080
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: password
-      PROXY_ADDRESS_FORWARDING: "true"
-      KEYCLOAK_LOGLEVEL: DEBUG
-      KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
-      KEYCLOAK_IMPORT: /tmp/webprotege.json
-      KEYCLOAK_HOSTNAME_ADMIN_URL: "http://webprotege-local.edu/auth"
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=password
+      - KC_PROXY=edge
+      - KC_LOG_LEVEL=DEBUG
+      - KC_HTTP_RELATIVE_PATH=/keycloak-admin
+      - KC_FEATURES=hostname
+      - KC_THEME=webprotege
+      - KC_THEME_LOGIN=webprotege
     volumes:
-      - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
-      - ./keycloak:/tmp
+      - keycloak-h2-directory:/opt/keycloak/data
+      - ./keycloak/webprotege.v2:/opt/keycloak/themes/webprotege.v2
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
+      test: [ "CMD", "/opt/keycloak/bin/kc.sh", "show-config" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -92,7 +97,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:7.2.6-WHO
+    image: protegeproject/webprotege-gwt-ui-server:7.2.7-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -289,37 +294,37 @@ services:
     volumes:
       - webprotege-data-directory:/srv/webprotege
 
-#
-#  icatx-versioning-service:
-#    user: root
-#    image: protegeproject/icatx-versioning-service:0.0.2
-#    ports:
-#      - '5013:5013'
-#      - '7722:7722'
-#    depends_on:
-#      mongo:
-#        condition: service_started
-#      zipkin:
-#        condition: service_started
-#      rabbitmq:
-#        condition: service_healthy
-#    environment:
-#      spring.zipkin.baseUrl: http://zipkin:9411
-#      webprotege.minio.accessKey: webprotege
-#      webprotege.minio.secretKey: webprotege
-#      webprotege.minio.endPoint: http://minio:9000
-#      webprotege.directories.data: /srv/webprotege
-#      webprotege.directories.backup: /webprotege/backup
-#      webprotege.versioning.location: /srv/versioning/
-#      _JAVA_OPTIONS: >
-#        -Xdebug
-#        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
-#      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
-#      webprotege.rabbit.timeout: 600000
-#    volumes:
-#      - webprotege-data-directory:/srv/webprotege
-#      - webprotege-backup-directory:/webprotege/backup
-#      - webprotege-versioning-directory:/srv/versioning/
+
+  icatx-versioning-service:
+    user: root
+    image: protegeproject/icatx-versioning-service:0.0.2
+    ports:
+      - '5013:5013'
+      - '7722:7722'
+    depends_on:
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.zipkin.baseUrl: http://zipkin:9411
+      webprotege.minio.accessKey: webprotege
+      webprotege.minio.secretKey: webprotege
+      webprotege.minio.endPoint: http://minio:9000
+      webprotege.directories.data: /srv/webprotege
+      webprotege.directories.backup: /webprotege/backup
+      webprotege.versioning.location: /srv/versioning/
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      webprotege.rabbit.timeout: 600000
+    volumes:
+      - webprotege-data-directory:/srv/webprotege
+      - webprotege-backup-directory:/webprotege/backup
+      - webprotege-versioning-directory:/srv/versioning/
 
   icatx-api-gateway:
     user: root
@@ -351,7 +356,7 @@ services:
 
 
   nginx:
-    image: protegeproject/webprotege-nginx:1.2.0
+    image: protegeproject/webprotege-nginx:1.2.1
     hostname: webprotege-local.edu
     ports:
       - 80:80
