--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name webprotege-local.edu;
+    server_name icatx.northeurope.cloudapp.azure.com;
     sendfile on;
     client_max_body_size 40M;
     client_body_buffer_size 40M;
