--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ services:
       spring.servlet.multipart.max-file-size: 300MB
       spring.servlet.multipart.max-request-size: 300MB
       webprotege.rabbit.timeout: 600000
+      spring.security.oauth2.client.provider.keycloak.issuer-uri: http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/realms/webprotege
+      spring.security.oauth2.resourceserver.jwt.issuer-uri: http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/realms/webprotege
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008
@@ -109,6 +111,7 @@ services:
       minio.access.key: minioadmin
       minio.access.secret: minioadmin
       minio.endPoint: http://minio:9000
+      KEYCLOAK_AUTH_URL: http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/
       webprotege.gwt-api-gateway.endPoint: http://webprotege-gwt-api-gateway:7777
       webprotege.rabbit.timeout: 300000
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
@@ -136,6 +139,7 @@ services:
       keycloak.jwk-set-uri: http://keycloak:8080
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      keycloak-issuer-url: http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/realms/webprotege/protocol/openid-connect/certs
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5010
@@ -171,6 +175,7 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
+      webprotege.keycloak.serverUrl: http://icatx.northeurope.cloudapp.azure.com/keycloak-admin
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       _JAVA_OPTIONS: >
         -Xdebug
