--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,7 +62,7 @@ server {
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_set_header   X-Forwarded-Host $http_host;
         proxy_set_header   X-Forwarded-Port $server_port;
-        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://webprotege-local.edu/keycloak-admin/;
+        proxy_redirect     http://keycloak:8080/keycloak-admin/ http://icatx.northeurope.cloudapp.azure.com/keycloak-admin/;
     }
 
     location /wsapps {
