--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -253,7 +253,7 @@ services:
       JVM_ENV: -Xms7g -Xmx7g -XX:MaxRAMPercentage=70
       webprotege.rabbit.timeout: 600000
     volumes:
-      - webprotege-data-directory:/srv/webprotege
+      - webprotege-data-directory:/media/webprotegebackend
       - webprotege-backup-directory:/webprotege/backup
 
   webprotege-linearization-service:
