--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -247,7 +247,7 @@ services:
       JVM_ENV: -Xms7g -Xmx7g -XX:MaxRAMPercentage=70
       webprotege.rabbit.timeout: 600000
     volumes:
-      - webprotege-data-directory:/srv/webprotege
+      - /srv/webprotege:/srv/webprotege
       - webprotege-backup-directory:/webprotege/backup
 
   webprotege-linearization-service:
