--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -301,38 +301,36 @@ services:
     volumes:
       - webprotege-data-directory:/srv/webprotege
 
-#
-#  icatx-versioning-service:
-#    user: root
-#    image: protegeproject/icatx-versioning-service:0.0.2
-#    ports:
-#      - '5013:5013'
-#      - '7722:7722'
-#    depends_on:
-#      mongo:
-#        condition: service_started
-#      zipkin:
-#        condition: service_started
-#      rabbitmq:
-#        condition: service_healthy
-#    environment:
-#      spring.zipkin.baseUrl: http://zipkin:9411
-#      webprotege.minio.accessKey: webprotege
-#      webprotege.minio.secretKey: webprotege
-#      webprotege.minio.endPoint: http://minio:9000
-#      webprotege.directories.data: /srv/webprotege
-#      webprotege.directories.backup: /webprotege/backup
-#      SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
-#      webprotege.versioning.location: /srv/versioning/
-#      _JAVA_OPTIONS: >
-#        -Xdebug
-#        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
-#      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
-#      webprotege.rabbit.timeout: 600000
-#    volumes:
-#      - webprotege-data-directory:/srv/webprotege
-#      - webprotege-backup-directory:/webprotege/backup
-#      - webprotege-versioning-directory:/srv/versioning/
+
+  icatx-versioning-service:
+    user: root
+    image: protegeproject/icatx-versioning-service:0.0.3
+    ports:
+      - '5013:5013'
+      - '7722:7722'
+    depends_on:
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.zipkin.baseUrl: http://zipkin:9411
+      webprotege.minio.accessKey: webprotege
+      webprotege.minio.secretKey: webprotege
+      webprotege.minio.endPoint: http://minio:9000
+      webprotege.directories.data: /srv/webprotege
+      webprotege.directories.backup: /webprotege/backup
+      SPRING_DATA_MONGODB_URI: "${MONGO_URL}"
+      webprotege.versioning.location: /srv/versioning/
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5013
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      webprotege.rabbit.timeout: 600000
+    volumes:
+      - /srv/webprotege:/srv/webprotege
+      - /webprotege/backup:/webprotege/backup
+      - /srv/versioning/:/srv/versioning/
 
   icatx-api-gateway:
     user: root
