--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,6 +39,11 @@ server {
         client_max_body_size   500m;
     }
 
+    location /icat/ {
+          proxy_pass http://icatx-versioning-service:7779/icat/;
+          proxy_set_header   Host $http_host;
+    }
+
     location /data/ {
         proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
         proxy_set_header   Host $http_host;
