--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ server {
     }
 
     location /icat/ {
-          proxy_pass http://icatx-versioning-service:7779/icat/;
+          proxy_pass http://icatx-api-gateway:7779/icat/;
           proxy_set_header   Host $http_host;
     }
 
